2011-03-29  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        XML Viewer: declared namespaces are not rendered.
        https://bugs.webkit.org/show_bug.cgi?id=56262

        XML viewer rewritten on javascript.

        * http/tests/xmlviewer/dumpAsText/wml-expected.txt:
        * http/tests/xmlviewer/dumpAsText/xlink-expected.txt:
        * http/tests/xmlviewer/dumpAsText/xmlviewer-expected.txt:
        * http/tests/xmlviewer/dumpAsText/xul-expected.txt:
        * platform/chromium-linux/http/tests/xmlviewer/dumpAsText/wml-expected.txt: Removed.
        * platform/chromium/http/tests/xmlviewer/dumpAsText/mathml-expected.txt:
2011-03-29  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        XML Viewer: declared namespaces are not rendered.
        https://bugs.webkit.org/show_bug.cgi?id=56262

        XML viewer rewritten on javascript.

        * CMakeLists.txt:
        * DerivedSources.make:
        * GNUmakefile.am:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/XMLDocumentParserLibxml2.cpp:
        (WebCore::XMLDocumentParser::doEnd):
        * xml/XMLTreeViewer.cpp:
        (WebCore::XMLTreeViewer::transformDocumentToTreeView):
        * xml/XMLViewer.css: Added.
        * xml/XMLViewer.js: Added.
        * xml/XMLViewer.xsl: Removed.
        * xml/XSLStyleSheet.h:

Canonical link: https://commits.webkit.org/72359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82562 268f45cc-cd09-0410-ab3c-d52691b4dbfc